--- a/pages/js.html
+++ b/pages/js.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>JS</title>
     <link rel="stylesheet" href="../styles/style.css">
+    <script src="../scripts/script.js" defer></script>
   </head>
 
   <body>
@@ -52,7 +53,7 @@
 
           <ul>
             <p><strong>День 5-6:</strong></p>
-            <li>Основы работы с функциями</li>
+            <li><a href="../pages/js/ch1-8.html">Основы работы с функциями</a></li>
             <li>Функции как блоки кода (определение, вызов)</li>
             <li>Параметры и возврат значений</li>
           </ul>
@@ -201,9 +202,9 @@
           </ul>
         
           <ul>
-            <li><a href="../pages/js-massiv.html">Массивы</a></li>
-            <li><a href="../pages/js-objects.html">Объекты</a></li>
-            <li><a href="../pages/js-cycle.html">Циклы</a></li>
+            <li><a href="../pages/js/js-massiv.html">Массивы</a></li>
+            <li><a href="../pages/js/js-objects.html">Объекты</a></li>
+            <li><a href="../pages/js/js-cycle.html">Циклы</a></li>
           </ul>
 
       </article>
