--- a/pages/js.html
+++ b/pages/js.html
@@ -54,13 +54,13 @@
           <ul>
             <p><strong>День 5-6:</strong></p>
             <li><a href="../pages/js/ch1-8.html">Основы работы с функциями</a></li>
-            <li>Функции как блоки кода (определение, вызов)</li>
-            <li>Параметры и возврат значений</li>
+            <li><a href="../pages/js/ch1-9.html">Функции как блоки кода (определение, вызов)</a></li>
+            <li><a href="../pages/js/ch1-10.html">Параметры и возврат значений</a></li>
           </ul>
 
           <ul>
             <p><strong>День 7:</strong></p>
-            <li>Практика: написание простых функций и выполнение арифметических операций</li>
+            <li><a href="../pages/js/ch1-11.html">Практика: написание простых функций и выполнение арифметических операций</a></li>
           </ul>
 
         <h1>Часть 2: Управление потоком и основы массивов</h1>
