--- a/pages/js/ch1-11.html
+++ b/pages/js/ch1-11.html
@@ -27,17 +27,132 @@
     <!--основной блок с информацией-->
     <main>
       <article>
-        <h1>Введение в js</h1><hr>
-        <h3>Структура </h3>
-
-        <p>
-          
-        </p>
-
-       
-
-
-
+        <h1>Практика: Написание простых функций и выполнение арифметических операций в JavaScript</h1><hr>
+        <ol>
+          <li><strong>Что такое простая функция?</strong></li>
+          <p>Простая функция в JavaScript — это функция, которая выполняет одну конкретную задачу. Она может принимать один или несколько параметров, выполнять какие-то операции и, при необходимости, возвращать результат. Простые функции — это основа программирования, так как они позволяют разделить сложные задачи на более мелкие и управляемые части.</p>
+          <li><strong>Примеры простых функций с арифметическими операциями</strong></li>
+          <p>Давайте рассмотрим несколько примеров простых функций, которые выполняют базовые арифметические операции.</p>
+          <p ><strong>Пример 1: Функция сложения</strong><br>Эта функция принимает два числа и возвращает их сумму.</p>
+<pre>
+  <code>
+    function add(a, b) {
+      return a + b;
+    }
+  
+    let result = add(3, 5); // result = 8
+    console.log(result);
+  </code>
+</pre>
+          <p><strong>Пример 2: Функция вычитания</strong><br>Эта функция принимает два числа и возвращает разницу между ними.</p>
+<pre>
+  <code>
+    function subtract(a, b) {
+      return a - b;
+    }
+  
+    let result = subtract(10, 4); // result = 6
+    console.log(result);
+  </code>
+</pre>
+          <p><strong>Пример 3: Функция умножения</strong><br>Функция, которая принимает два числа и возвращает их произведение.</p>
+<pre>
+  <code>
+    function multiply(a, b) {
+      return a * b;
+    }
+  
+    let result = multiply(6, 7); // result = 42
+    console.log(result);
+  </code>
+</pre>
+          <p><strong>Пример 4: Функция деления</strong><br>Эта функция принимает два числа и возвращает результат их деления.</p>
+<pre>
+  <code>
+    function divide(a, b) {
+      if (b !== 0) {
+          return a / b;
+      } else {
+          return "Ошибка: деление на ноль";
+      }
+    }
+  
+    let result = divide(15, 3); // result = 5
+    console.log(result);
+  
+    let error = divide(10, 0); // error = "Ошибка: деление на ноль"
+    console.log(error);
+  </code>
+</pre>
+          <li><strong>Более сложные примеры: комбинация арифметических операций</strong></li>
+          <p>Теперь, когда мы знаем, как писать простые функции для выполнения отдельных операций, можно создавать более сложные функции, которые будут сочетать несколько арифметических операций.</p>
+          <p><strong>Пример 5: Функция расчета среднего значения</strong><br>Эта функция принимает три числа и возвращает их среднее арифметическое.</p>
+<pre>
+  <code>
+    function calculateAverage(a, b, c) {
+      let sum = add(a, b) + c; // Используем ранее созданную функцию сложения
+      return sum / 3;
+    }
+  
+    let average = calculateAverage(4, 8, 12); // average = 8
+    console.log(average);
+  </code>
+</pre>
+          <p>Пример 6: Функция расчета процента от числа</p>
+          <p>Функция принимает два числа: общее значение и процент, который нужно вычислить, и возвращает результат.</p>
+<pre>
+  <code>
+    function calculatePercentage(total, percentage) {
+      return (total * percentage) / 100;
+    }
+  
+    let percentageValue = calculatePercentage(200, 15); // percentageValue = 30
+    console.log(percentageValue);
+  </code>
+</pre>
+          <li><strong>Практика написания и использования функций</strong></li>
+          <p>Чтобы уверенно работать с функциями, полезно регулярно практиковаться, решая небольшие задачи, которые включают арифметические операции. Например:</p>
+          <ul>
+            <li>Напишите функцию, которая принимает два числа и возвращает их остаток от деления.</li>
+            <li>Создайте функцию, которая рассчитывает периметр прямоугольника, зная его длину и ширину.</li>
+            <li>Напишите функцию, которая принимает три числа и возвращает максимальное из них.</li>
+          </ul>
+          <p><strong>Пример 7: Функция для вычисления остатка от деления</strong></p>
+<pre>
+  <code>
+    function modulus(a, b) {
+      return a % b;
+    }
+  
+    let remainder = modulus(17, 5); // remainder = 2
+    console.log(remainder);
+  </code>
+</pre>
+          <p><strong>Пример 8: Функция расчета периметра прямоугольника</strong></p>
+<pre>
+  <code>
+    function calculatePerimeter(length, width) {
+      return 2 * (length + width);
+    }
+  
+    let perimeter = calculatePerimeter(5, 10); // perimeter = 30
+    console.log(perimeter);
+  </code>
+</pre>
+          <p><strong>Пример 9: Функция для нахождения максимального числа</strong></p>
+<pre>
+  <code>
+    function findMax(a, b, c) {
+      return Math.max(a, b, c);
+    }
+  
+    let maxNumber = findMax(12, 7, 9); // maxNumber = 12
+    console.log(maxNumber);
+  </code>
+</pre>
+        </ol>
+        <p><strong>Заключение</strong></p>
+        <p>Написание простых функций с арифметическими операциями — это основа для понимания более сложных концепций программирования. Практика таких задач поможет вам лучше понять, как работают функции, и как они могут быть использованы для решения реальных проблем. Важно начать с простых примеров и постепенно переходить к более сложным задачам, комбинируя несколько функций и операций в одном решении.</p>
       </article>
     </main>
 
