--- a/pages/js.html
+++ b/pages/js.html
@@ -67,7 +67,7 @@
 
           <ul>
             <p><strong>День 1-2:</strong></p>
-            <li>Условные операторы (if, else, switch)</li>
+            <li><a href="../pages/js/ch2-1.html">Условные операторы (if, else, switch)</a></li>
             <li>Логические операторы</li>
             <li>Тернарный оператор</li>
           </ul>
