--- a/pages/js.html
+++ b/pages/js.html
@@ -68,7 +68,7 @@
           <ul>
             <p><strong>День 1-2:</strong></p>
             <li><a href="../pages/js/ch2-1.html">Условные операторы (if, else, switch)</a></li>
-            <li>Логические операторы</li>
+            <li><a href="../pages/js/ch2-2.html">Логические операторы</a></li>
             <li>Тернарный оператор</li>
           </ul>
 
