and another one

--- a/pages/js.html
+++ b/pages/js.html
@@ -69,7 +69,7 @@
             <p><strong>День 1-2:</strong></p>
             <li><a href="../pages/js/ch2-1.html">Условные операторы (if, else, switch)</a></li>
             <li><a href="../pages/js/ch2-2.html">Логические операторы</a></li>
-            <li>Тернарный оператор</li>
+            <li><a href="../pages/js/ch2-3.html">Тернарный оператор</a></li>
           </ul>
 
           <ul>
