--- a/pages/js.html
+++ b/pages/js.html
@@ -74,7 +74,7 @@
 
           <ul>
             <p><strong>День 3-4:</strong></p>
-            <li>Циклы (for, while, do...while)</li>
+            <li><a href="../pages/js/ch2-4.html">Циклы (for, while, do...while)</a></li>
             <li>Вложенные циклы и управление потоком (break, continue)</li>
           </ul>
 
