--- a/pages/js.html
+++ b/pages/js.html
@@ -75,7 +75,7 @@
           <ul>
             <p><strong>День 3-4:</strong></p>
             <li><a href="../pages/js/ch2-4.html">Циклы (for, while, do...while)</a></li>
-            <li>Вложенные циклы и управление потоком (break, continue)</li>
+            <li><a href="../pages/js/ch2-5.html">Вложенные циклы и управление потоком (break, continue)</a></li>
           </ul>
 
           <ul>
