--- a/pages/js.html
+++ b/pages/js.html
@@ -80,7 +80,7 @@
 
           <ul>
             <p><strong>День 5-6:</strong></p>
-            <li>Введение в массивы</li>
+            <li><a href="../pages/js/ch2-6.html">Введение в массивы</a></li>
             <li>Основные методы массивов (push, pop, shift, unshift)</li>
           </ul>
 
