--- a/pages/js.html
+++ b/pages/js.html
@@ -81,7 +81,7 @@
           <ul>
             <p><strong>День 5-6:</strong></p>
             <li><a href="../pages/js/ch2-6.html">Введение в массивы</a></li>
-            <li>Основные методы массивов (push, pop, shift, unshift)</li>
+            <li><a href="../pages/js/ch2-7.html">Основные методы массивов (push, pop, shift, unshift)</a></li>
           </ul>
 
           <ul>
