and another one

--- a/pages/js.html
+++ b/pages/js.html
@@ -93,7 +93,7 @@
           
           <ul>
             <p><strong>День 1-2:</strong></p>
-            <li>Введение в объекты</li>
+            <li><a href="../pages/js/ch3-1.html">Введение в объекты</a></li>
             <li>Создание и доступ к свойствам объектов</li>
             <li>Методы объектов</li>
           </ul>
