--- a/pages/js.html
+++ b/pages/js.html
@@ -94,7 +94,7 @@
           <ul>
             <p><strong>День 1-2:</strong></p>
             <li><a href="../pages/js/ch3-1.html">Введение в объекты</a></li>
-            <li>Создание и доступ к свойствам объектов</li>
+            <li><a href="../pages/js/ch3-2.html">Создание и доступ к свойствам объектов</a></li>
             <li>Методы объектов</li>
           </ul>
 
