--- a/pages/js.html
+++ b/pages/js.html
@@ -95,7 +95,7 @@
             <p><strong>День 1-2:</strong></p>
             <li><a href="../pages/js/ch3-1.html">Введение в объекты</a></li>
             <li><a href="../pages/js/ch3-2.html">Создание и доступ к свойствам объектов</a></li>
-            <li>Методы объектов</li>
+            <li><a href="../pages/js/ch3-3.html">Методы объектов</a></li>
           </ul>
 
           <ul>
