--- a/pages/js.html
+++ b/pages/js.html
@@ -100,7 +100,7 @@
 
           <ul>
             <p><strong>День 3-4:</strong></p>
-            <li>Введение в обработку ошибок</li>
+            <li><a href="../pages/js/ch3-4.html">Введение в обработку ошибок</a></li>
             <li>Конструкции try, catch, finally</li>
             <li>Создание собственных ошибок (throw)</li>
           </ul>
