--- a/pages/js.html
+++ b/pages/js.html
@@ -107,7 +107,7 @@
 
           <ul>
             <p><strong>День 5-6:</strong></p>
-            <li>Глубокое копирование и сравнение объектов</li>
+            <li><a href="../pages/js/ch3-7.html">Глубокое копирование и сравнение объектов</a></li>
             <li>Прототипы и наследование</li>
           </ul>
   
