--- a/pages/js.html
+++ b/pages/js.html
@@ -108,7 +108,7 @@
           <ul>
             <p><strong>День 5-6:</strong></p>
             <li><a href="../pages/js/ch3-7.html">Глубокое копирование и сравнение объектов</a></li>
-            <li>Прототипы и наследование</li>
+            <li><a href="../pages/js/ch3-8.html">Прототипы и наследование</a></li>
           </ul>
   
           <ul>
