--- a/pages/js.html
+++ b/pages/js.html
@@ -120,7 +120,7 @@
 
           <ul>
             <p><strong>День 1-2:</strong></p>
-            <li>Введение в Document Object Model (DOM)</li>
+            <li><a href="../pages/js/ch4-1.html">Введение в Document Object Model (DOM)</a></li>
             <li>Поиск и манипуляция элементами DOM (getElementById, querySelector)</li>
             <li>Изменение стилей и содержимого элементов</li>
           </ul>
